initial jump fixed

--- a/src/components/ui/about/about.module.scss
+++ b/src/components/ui/about/about.module.scss
@@ -72,6 +72,7 @@
 
     .text {
       margin: 15px 10px;
+      line-height: 1.4;
     }
 
     .info {
