--- a/src/components/ui/hero/hero.module.scss
+++ b/src/components/ui/hero/hero.module.scss
@@ -23,6 +23,7 @@
   align-items: center;
   position: relative;
   align-items: center;
+  min-height: 620px;
 
   .content {
     width: 100%;
@@ -64,7 +65,7 @@
     margin: 0;
     opacity: 0;
     position: relative;
-    animation: title 1.5s 0.4s ease forwards;
+    animation: title 1.5s 0.5s ease forwards;
   }
 
   .subtitle {
@@ -75,7 +76,7 @@
     font-weight: 400;
     position: relative;
     opacity: 0;
-    animation: title 1.5s 0.6s ease forwards;
+    animation: title 1.5s 0.7s ease forwards;
   }
 
   .images {
@@ -93,6 +94,9 @@
 }
 
 @media only screen and (max-width: 767px) {
+  .container {
+    min-height: 210px;
+  }
   .textContainer {
     top: 40%;
     bottom: auto;
