--- a/src/components/ui/portfolio/portfolio.module.scss
+++ b/src/components/ui/portfolio/portfolio.module.scss
@@ -46,6 +46,7 @@
 
     .text {
       margin: 15px 10px;
+      line-height: 1.4;
     }
 
     .projects {
